--- a/main/src/main/res/layout/layout_search_bar.xml
+++ b/main/src/main/res/layout/layout_search_bar.xml
@@ -4,13 +4,13 @@
              android:layout_width="match_parent"
              android:layout_height="?android:attr/actionBarSize">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_margin="@dimen/base_dimen_8dp"
-                  android:background="@drawable/search_bar_background"
-                  android:elevation="@dimen/base_dimen_4dp"
-                  android:gravity="center_vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/base_dimen_8dp"
+        android:background="@drawable/search_bar_background"
+        android:elevation="@dimen/base_dimen_4dp"
+        android:gravity="center_vertical">
 
         <ImageView
             android:layout_width="@dimen/search_icon_size"
@@ -20,9 +20,12 @@
             android:src="@drawable/search_icon"/>
 
         <EditText
+            android:id="@+id/search_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
             android:maxLines="1"/>
 
     </LinearLayout>
