--- a/main/src/main/res/layout/activity_settings.xml
+++ b/main/src/main/res/layout/activity_settings.xml
@@ -15,11 +15,11 @@
         app:popupTheme="@style/Theme.AppCompat.Light"/>
 
     <LinearLayout
-        android:background="@color/base_color_white"
         android:id="@+id/settings_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_dimen_16dp"
+        android:background="@color/base_color_white"
         android:elevation="@dimen/base_dimen_2dp"
         android:gravity="center_vertical"
         android:padding="@dimen/base_dimen_8dp">
@@ -39,11 +39,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:background="@color/base_color_white"
         android:id="@+id/settings_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_dimen_16dp"
+        android:background="@color/base_color_white"
         android:elevation="@dimen/base_dimen_2dp"
         android:gravity="center_vertical"
         android:padding="@dimen/base_dimen_8dp">
@@ -59,6 +59,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings_about"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/settings_version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_dimen_16dp"
+        android:background="@color/base_color_white"
+        android:elevation="@dimen/base_dimen_2dp"
+        android:gravity="center_vertical"
+        android:padding="@dimen/base_dimen_8dp">
+
+        <ImageView
+            android:layout_width="@dimen/base_dimen_24dp"
+            android:layout_height="@dimen/base_dimen_24dp"
+            android:layout_marginLeft="@dimen/base_dimen_8dp"
+            android:layout_marginRight="@dimen/base_dimen_8dp"
+            android:src="@drawable/setting_version"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/settings_version"/>
+
+        <TextView
+            android:id="@+id/settings_version_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/base_dimen_8dp"
+            android:layout_marginRight="@dimen/base_dimen_8dp"/>
 
     </LinearLayout>
 
