--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:contentDescription="@string/default_image_description"
-    android:orientation="vertical"
-    android:scaleType="centerCrop"
-    android:src="@drawable/login_background_02"/>
+    android:layout_height="match_parent"/>
