--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,7 +18,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/login_background_03"/>
 
-        <com.kyletung.simplebookmovie.view.RectLayout
+        <com.kyletung.commonlib.view.RectLayout
             android:id="@+id/icon_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,7 +42,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/base_dimen_4dp"/>
 
-        </com.kyletung.simplebookmovie.view.RectLayout>
+        </com.kyletung.commonlib.view.RectLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
