--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.kyletung.simplebookmovie.view.RectLayout
+        <com.kyletung.commonlib.view.RectLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/base_color_white"
@@ -48,7 +48,7 @@
 
             </LinearLayout>
 
-        </com.kyletung.simplebookmovie.view.RectLayout>
+        </com.kyletung.commonlib.view.RectLayout>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
